tests/fixtures/errors/e0003_name_twice_in_module.mimz
// expect: E0003
module M {
  in x: bit
  out y: bit
  wire x: bit = y
  y = x
}
